Feature/Implement command line args builder
* Implemented SmtpMock::CommandLineArgsBuilder, tests
* Added SmtpMock::ContextGeneratorHelper, tests
* Updated rspec config
* Updated reek config

--- a/.reek.yml
+++ b/.reek.yml
@@ -4,4 +4,12 @@ detectors:
 
   UtilityFunction:
     exclude:
-      - SmtpMock#method
+      - SmtpMock::CommandLineArgsBuilder#to_camel_case
+
+  NestedIterators:
+    exclude:
+      - SmtpMock::CommandLineArgsBuilder#define_attribute
+
+  TooManyConstants:
+    exclude:
+      - SmtpMock
