Feature/Implement server
* Implemented SmtpMock::Server, tests
* Added SmtpMock::Dependency.verify_dependencies, tests
* Updated SmtpMock::ContextGeneratorHelper, tests
* Added SmtpMock::ServerHelper, tests
* Updated reek config

--- a/.reek.yml
+++ b/.reek.yml
@@ -5,6 +5,7 @@ detectors:
   UtilityFunction:
     exclude:
       - SmtpMock::CommandLineArgsBuilder#to_camel_case
+      - SmtpMock::ContextGeneratorHelper
 
   NestedIterators:
     exclude:
@@ -14,3 +15,8 @@ detectors:
   TooManyStatements:
     exclude:
       - SmtpMock::Cli::Resolver#resolve
+      - SmtpMock::Server#run
+
+  MissingSafeMethod:
+    exclude:
+      - SmtpMock::Server
