Technical/Change post-install to generator
* Added SmtpMock::Cli, SmtpMock::Cli::Resolver, tests
* Added smtp_mock executable script
* Removed post-install plugin
* Updated gemspec, reek/circleci configs

--- a/.reek.yml
+++ b/.reek.yml
@@ -9,7 +9,8 @@ detectors:
   NestedIterators:
     exclude:
       - SmtpMock::CommandLineArgsBuilder#define_attribute
+      - SmtpMock::Cli::Resolver#resolve
 
-  TooManyConstants:
+  TooManyStatements:
     exclude:
-      - SmtpMock
+      - SmtpMock::Cli::Resolver#resolve
