--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,14 @@ references:
       paths:
         - vendor/bundle
 
+  system_dependencies: &system_dependencies
+    run:
+      name: Installing system requirements
+      command: |
+            sudo apt-get update
+            sudo apt-get install -y lsof
+            bundle exec smtp_mock -s -i ~
+
   install_codeclimate_reporter: &install_codeclimate_reporter
     run:
       name: Installing CodeClimate test reporter
@@ -68,6 +76,7 @@ jobs:
       - <<: *restore_bundle_cache
       - <<: *bundle_install
       - <<: *save_bundle_cache
+      - <<: *system_dependencies
       - <<: *install_codeclimate_reporter
 
       - run:
@@ -103,6 +112,7 @@ jobs:
           bundler-version: "2.3.4"
           with-cache: false
           path: './vendor/custom_bundle'
+      - <<: *system_dependencies
       - run:
           name: Running compatibility tests
           command: bundle exec rspec
