Feature/RSpec integration
* Added SmtpMock::TestFramework::RSpec::Interface, tests
* Added SmtpMock::TestFramework::RSpec::Helper, tests
* Added RSpec SmtpMock config
* Updated reek config

--- a/.reek.yml
+++ b/.reek.yml
@@ -7,6 +7,7 @@ detectors:
       - SmtpMock::CommandLineArgsBuilder#to_camel_case
       - SmtpMock::DependencyHelper#compose_command
       - SmtpMock::ServerHelper
+      - SmtpMock::TestFramework::RSpec::Helper#smtp_mock_server
 
   NestedIterators:
     exclude:
