Technical/Refactor server
* Removed lsof system dependency
* Refactored SmtpMock::Server, tests
* Refactored SmtpMock::Dependency, tests
* Updated gemspec, reek/circleci configs
* Updated gitignore, added tmp gitkeep
* Added SmtpMock::Server::Port, tests
* Added SmtpMock::Server::Process, tests
* Updated RSpec helpers, tests

--- a/.reek.yml
+++ b/.reek.yml
@@ -19,10 +19,11 @@ detectors:
     exclude:
       - SmtpMock::Cli::Resolver#resolve
       - SmtpMock::Server#run
+      - SmtpMock::ServerHelper#create_fake_servers
 
-  ControlParameter:
+  TooManyInstanceVariables:
     exclude:
-      - SmtpMock::DependencyHelper#lsof_port_by_pid_result
+      - SmtpMock::Server
 
   LongParameterList:
     exclude:
