--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,20 +83,20 @@ jobs:
             ./cc-test-reporter before-build
             bundle exec rspec
 
-      # - run:
-      #     name: Creating CodeClimate test coverage report
-      #     command: |
-      #       ./cc-test-reporter format-coverage -t simplecov -o "coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
+      - run:
+          name: Creating CodeClimate test coverage report
+          command: |
+            ./cc-test-reporter format-coverage -t simplecov -o "coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
 
       - store_artifacts:
           name: Saving Simplecov coverage artifacts
           path: ~/ruby-smtp-mock/coverage
           destination: coverage
 
-      # - deploy:
-      #     name: Uploading CodeClimate test coverage report
-      #     command: |
-      #       ./cc-test-reporter sum-coverage --output - --parts $CIRCLE_NODE_TOTAL coverage/codeclimate.*.json | ./cc-test-reporter upload-coverage --debug --input -
+      - deploy:
+          name: Uploading CodeClimate test coverage report
+          command: |
+            ./cc-test-reporter sum-coverage --output - --parts $CIRCLE_NODE_TOTAL coverage/codeclimate.*.json | ./cc-test-reporter upload-coverage --debug --input -
 
   compatibility-ruby:
     parameters:
