--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,6 +8,9 @@ plugins:
   rubocop:
     enabled: true
     channel: rubocop-1-24
+    checks:
+      Rubocop/Metrics/MethodLength:
+        enabled: false
 
   reek:
     enabled: true
