Feature/Version handler
* Added smtpmock version checker
* Added command for upgrade smtpmock to latest version
* Added SmtpMock::Error::Dependency::SMTPMOCK_MIN_VERSION
* Added SmtpMock::Server#version, tests
* Updated SmtpMock::Dependency.verify_dependencies, tests
* Updated SmtpMock::Cli::Command, tests
* Refactored SmtpMock::Cli::Resolver, tests
* Updated gem version, documentation, changelog

--- a/.reek.yml
+++ b/.reek.yml
@@ -9,6 +9,7 @@ detectors:
       - SmtpMock::ServerHelper
       - SmtpMock::TestFramework::RSpec::Helper#smtp_mock_server
       - SmtpMock::ContextGeneratorHelper#random_message
+      - SmtpMock::Cli::Resolver#install_to
 
   NestedIterators:
     exclude:
