Technical/Update gemspecs
* Development environment guide
* Updated gemspecs
* Updated codeclimate/circleci configs
* Updated gem development dependencies
* Updated gem version, changelog

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,9 +40,15 @@ references:
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
 
+  use_latest_gemspec: &use_latest_gemspec
+    run:
+      name: Using latest gemspec
+      command: |
+            cp .circleci/gemspec_latest smtp_mock.gemspec
+
   use_compatible_gemspec: &use_compatible_gemspec
     run:
-      name: Use compatible gemspec
+      name: Using compatible gemspec
       command: |
             cp .circleci/gemspec_compatible smtp_mock.gemspec
 
@@ -57,6 +63,7 @@ jobs:
     steps:
       - checkout
 
+      - <<: *use_latest_gemspec
       - <<: *restore_bundle_cache
       - <<: *bundle_install
       - <<: *save_bundle_cache
@@ -77,6 +84,7 @@ jobs:
     steps:
       - checkout
 
+      - <<: *use_latest_gemspec
       - <<: *restore_bundle_cache
       - <<: *bundle_install
       - <<: *save_bundle_cache
@@ -114,7 +122,7 @@ jobs:
       - checkout
       - <<: *use_compatible_gemspec
       - ruby/install-deps:
-          bundler-version: "2.3.5"
+          bundler-version: "2.3.9"
           with-cache: false
           path: './vendor/custom_bundle'
       - <<: *system_dependencies
