Feature/Ability to check smtpmock version from cli
* Added ability to check smtpmock version from cli
* Updated development environment guide
* Updated gemspecs
* Updated codeclimate/circleci configs
* Updated gem development dependencies
* Updated gem version, changelog

--- a/.reek.yml
+++ b/.reek.yml
@@ -14,13 +14,13 @@ detectors:
   NestedIterators:
     exclude:
       - SmtpMock::CommandLineArgsBuilder#define_attribute
-      - SmtpMock::Cli::Resolver#resolve
 
   TooManyStatements:
     exclude:
-      - SmtpMock::Cli::Resolver#resolve
       - SmtpMock::Server#run
       - SmtpMock::ServerHelper#create_fake_servers
+      - SmtpMock::Cli::Resolver#install
+      - SmtpMock::Cli::Resolver#resolve
 
   TooManyInstanceVariables:
     exclude:
