--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -169,6 +169,18 @@ Style/OpenStructUse:
 Style/NestedFileDirname:
   Enabled: true
 
+Style/EnvHome:
+  Enabled: true
+
+Style/FetchEnvVar:
+  Enabled: true
+
+Style/ObjectThen:
+  Enabled: true
+
+Style/RedundantInitialize:
+  Enabled: true
+
 Layout/LineLength:
   Max: 150
 
@@ -284,6 +296,9 @@ Lint/IncompatibleIoSelectWithFiberScheduler:
 Lint/RequireRelativeSelfPath:
   Enabled: true
 
+Lint/RefinementImportMethods:
+  Enabled: true
+
 Lint/UselessRuby2Keywords:
   Enabled: true
 
@@ -294,6 +309,9 @@ Gemspec/RequireMFA:
   Enabled: false
 
 Security/IoMethods:
+  Enabled: true
+
+Security/CompoundHash:
   Enabled: true
 
 Performance/AncestorsInclude:
@@ -400,3 +418,6 @@ RSpec/BeEq:
 
 RSpec/BeNil:
   Enabled: true
+
+RSpec/VerifiedDoubleReference:
+  Enabled: false
