--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,6 +163,20 @@ jobs:
           name: Running compatibility tests
           command: bundle exec rspec
 
+  rubygems-deps-ruby:
+    parameters:
+      ruby-version:
+        type: string
+
+    <<: *defaults
+
+    steps:
+      - checkout
+
+      - run:
+          name: Building rubygems dependencies from default gemspec on minimal Ruby version
+          command: bundle install
+
   releasing-gem-from-ruby:
     parameters:
       ruby-version:
@@ -196,11 +210,16 @@ workflows:
           matrix:
             parameters:
               ruby-version: ["2.5", "2.6", "2.7", "3.0", "3.1"]
+      - rubygems-deps-ruby:
+          matrix:
+            parameters:
+              ruby-version: ["2.5"]
       - releasing-gem-from-ruby:
           requires:
             - linters-ruby
             - tests-ruby
             - compatibility-ruby
+            - rubygems-deps-ruby
           matrix:
             parameters:
               ruby-version: ["2.5"]
