Technical/Update CircleCI Ruby image
* Updated CircleCI config
* Updated rubocop config
* Fixed rubocop issues
* Fixed markdownlint issues

--- a/.circleci/linter_configs/.rubocop.yml
+++ b/.circleci/linter_configs/.rubocop.yml
@@ -88,6 +88,9 @@ Layout/EmptyLineAfterGuardClause:
 Gemspec/RequireMFA:
   Enabled: false
 
+Gemspec/DevelopmentDependencies:
+  Enabled: false
+
 # Performance -----------------------------------------------------------------
 
 Performance/MethodObjectAsBlock:
