Technical/Update gem development dependencies
* Updated latest gemspec
* Updated rubocop config

--- a/.circleci/linter_configs/.rubocop.yml
+++ b/.circleci/linter_configs/.rubocop.yml
@@ -91,6 +91,9 @@ Gemspec/RequireMFA:
 Gemspec/DevelopmentDependencies:
   Enabled: false
 
+Gemspec/AddRuntimeDependency:
+  Enabled: false
+
 # Performance -----------------------------------------------------------------
 
 Performance/MethodObjectAsBlock:
