Technical/Update gem development dependencies
* Updated gem development dependencies
* Updated circleci/rubocop/codeclimate configs

--- a/.circleci/linter_configs/.rubocop.yml
+++ b/.circleci/linter_configs/.rubocop.yml
@@ -133,3 +133,6 @@ RSpec/StubbedMock:
 
 RSpec/VerifiedDoubleReference:
   Enabled: false
+
+RSpec/StringAsInstanceDoubleConstant:
+  Enabled: false
